--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-native-video",
+    "name": "better-react-native-video",
     "version": "6.0.0-alpha.7",
     "description": "A <Video /> element for react-native",
     "main": "Video.js",
