--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "better-react-native-video",
-    "version": "6.0.0-alpha.9.3",
+    "version": "6.0.0-alpha.9.4",
     "description": "A <Video /> element for react-native",
     "main": "lib/index",
     "source": "src/index",
     "react-native": "src/index",
+    "types": "Video.d.ts",
     "license": "MIT",
     "author": "Community Contributors",
     "homepage": "https://github.com/LimitedDani/better-react-native-video#readme",
